--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -1040,10 +1040,15 @@ spec:
                             type: boolean
                           terminated:
                             type: boolean
+                          waitCount:
+                            description: WaitCount counts the reconcile times on conditional
+                              wait
+                            type: integer
                         required:
                         - mode
                         - suspend
                         - terminated
+                        - waitCount
                         type: object
                     type: object
                 type: object
@@ -3113,10 +3118,15 @@ spec:
                             type: boolean
                           terminated:
                             type: boolean
+                          waitCount:
+                            description: WaitCount counts the reconcile times on conditional
+                              wait
+                            type: integer
                         required:
                         - mode
                         - suspend
                         - terminated
+                        - waitCount
                         type: object
                     type: object
                 type: object
