--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -708,10 +708,14 @@ spec:
                     type: boolean
                   terminated:
                     type: boolean
+                  waitCount:
+                    description: WaitCount counts the reconcile times on conditional wait
+                    type: integer
                 required:
                 - mode
                 - suspend
                 - terminated
+                - waitCount
                 type: object
             type: object
         type: object
@@ -1491,10 +1495,14 @@ spec:
                     type: boolean
                   terminated:
                     type: boolean
+                  waitCount:
+                    description: WaitCount counts the reconcile times on conditional wait
+                    type: integer
                 required:
                 - mode
                 - suspend
                 - terminated
+                - waitCount
                 type: object
             type: object
         type: object
