--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -953,10 +953,15 @@ spec:
                     type: boolean
                   terminated:
                     type: boolean
+                  waitCount:
+                    description: WaitCount counts the reconcile times on conditional
+                      wait
+                    type: integer
                 required:
                 - mode
                 - suspend
                 - terminated
+                - waitCount
                 type: object
             type: object
         type: object
@@ -2001,10 +2006,15 @@ spec:
                     type: boolean
                   terminated:
                     type: boolean
+                  waitCount:
+                    description: WaitCount counts the reconcile times on conditional
+                      wait
+                    type: integer
                 required:
                 - mode
                 - suspend
                 - terminated
+                - waitCount
                 type: object
             type: object
         type: object
