--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
@@ -1151,10 +1151,15 @@ spec:
                             type: boolean
                           terminated:
                             type: boolean
+                          waitCount:
+                            description: WaitCount counts the reconcile times on conditional
+                              wait
+                            type: integer
                         required:
                         - mode
                         - suspend
                         - terminated
+                        - waitCount
                         type: object
                     type: object
                 type: object
