Fix: fix alibaba cloud rds module
Enable users to set `db_instance_storage_type`. This can fix the issue
happended since Sept. 14, 2021.
{"Code":"InvalidNetworkTypeClassicWhenCloudStorage","HostId":
"rds.aliyuncs.com","Message":"The Specified InstanceNetworkType
value Classic is not valid when choose cloud storage type."

--- a/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
+++ b/charts/vela-core/templates/definitions/terraform-alibaba-rds.yaml
@@ -16,10 +16,11 @@ spec:
     terraform:
       configuration: |
         module "rds" {
-          source = "terraform-alicloud-modules/rds/alicloud"
+          source = "github.com/zzxwill/terraform-alicloud-rds"
           engine = "MySQL"
           engine_version = "8.0"
           instance_type = "rds.mysql.c1.large"
+          instance_storage_type = "local_ssd"
           instance_storage = "20"
           instance_name = var.instance_name
           account_name = var.account_name
