--- a/charts/vela-minimal/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-minimal/crds/core.oam.dev_applicationrevisions.yaml
@@ -1239,6 +1239,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -1627,6 +1628,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -1913,6 +1915,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -3314,6 +3317,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -3595,6 +3599,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -3965,6 +3970,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -4214,6 +4220,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
@@ -4479,6 +4486,7 @@ spec:
                                   enum:
                                   - hcl
                                   - json
+                                  - remote
                                   type: string
                               required:
                               - configuration
