--- a/vela-templates/addons/auto-gen/terraform-provider-alibaba.yaml
+++ b/vela-templates/addons/auto-gen/terraform-provider-alibaba.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: terraform provider (alibaba)
+    addons.oam.dev/description: Kubernetes Terraform Controller for Alibaba Cloud
     addons.oam.dev/name: terraform/provider-alibaba
   name: terraform-provider-alibaba
   namespace: default
@@ -15,7 +15,7 @@ spec:
           apiVersion: v1
           kind: Secret
           metadata:
-            name: alibaba-provider-secret
+            name: alibaba-account-creds
             namespace: vela-system
           stringData:
             credentials: |
