--- a/docs/examples/workflow/apply-object/app.yaml
+++ b/docs/examples/workflow/apply-object/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: init-pvc
+  name: server-with-pvc
   namespace: default
 spec:
   components:
