--- a/test/e2e-multicluster-test/testdata/app/example-envbinding-app.yaml
+++ b/test/e2e-multicluster-test/testdata/app/example-envbinding-app.yaml
@@ -26,18 +26,25 @@ spec:
       type: env-binding
       properties:
         envs:
-          - name: staging
-            placement: # selecting the cluster to deploy to
-              clusterSelector:
-                name: local
+          - name: test
+            placement: # selecting the namespace to deploy to
+              namespaceSelector:
+                name: TEST_NAMESPACE
             selector:
               components:
                 - data-worker
 
-          - name: prod
-            placement:
+          - name: staging
+            placement: # selecting the cluster to deploy to
               clusterSelector:
                 name: cluster-worker
+
+          - name: prod
+            placement: # selecting both namespace and cluster to deploy to
+              clusterSelector:
+                name: cluster-worker
+              namespaceSelector:
+                name: PROD_NAMESPACE
             patch: # overlay patch on above components
               components:
                 - name: hello-world-server
@@ -49,6 +56,13 @@ spec:
 
   workflow:
     steps:
+      # deploy to test env
+      - name: deploy-test
+        type: deploy2env
+        properties:
+          policy: example-multi-env-policy
+          env: test
+
       # deploy to staging env
       - name: deploy-staging
         type: deploy2env
