--- a/.github/workflows/apiserver-test.yaml
+++ b/.github/workflows/apiserver-test.yaml
@@ -73,13 +73,21 @@ jobs:
           kubebuilderOnly: false
           kubernetesVersion: v1.21.2
       
-      - name: Run Make test
-        run: make test
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: 4.4
+      
+      - name: Run apiserver unit test 
+        run: make unit-test-apiserver
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
-          flags: core-unittests
+          flags: apiserver-unittests
           name: codecov-umbrella
+      
+      - name: Run apiserver e2e test
+        run: make e2e-apiserver-test
