--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -374,13 +374,13 @@ spec:
                   }
 
                   resource "azurerm_resource_group" "example" {
-                    name = "tfex-mariadb-database-RG"
-                    location = "West Europe"
+                    name = var.resource_group
+                    location = var.location
                   }
 
                   resource "azurerm_mariadb_server" "example" {
-                    name = "mariadb-svr-sample"
-                    location = azurerm_resource_group.example.location
+                    name = var.server_name
+                    location = var.location
                     resource_group_name = azurerm_resource_group.example.name
 
                     sku_name = "B_Gen5_2"
@@ -396,15 +396,21 @@ spec:
                   }
 
                   resource "azurerm_mariadb_database" "example" {
-                    name = var.name
+                    name = var.db_name
                     resource_group_name = azurerm_resource_group.example.name
                     server_name = azurerm_mariadb_server.example.name
                     charset = "utf8"
                     collation = "utf8_general_ci"
                   }
 
-                  variable "name" {
-                    default = "mariadb_database"
+                  variable "server_name" {
+                    type = string
+                    description = "mariadb server name"
+                    default = "mariadb-svr-sample"
+                  }
+
+                  variable "db_name" {
+                    default = "backend"
                     type = string
                     description = "Database instance name"
                   }
@@ -419,6 +425,39 @@ spec:
                     default = "H@Sh1CoR3!faked"
                     type = string
                     description = "Database instance password"
+                  }
+
+                  variable "location" {
+                    description = "Azure location"
+                    type = string
+                    default = "West Europe"
+                  }
+
+                  variable "resource_group" {
+                    description = "Resource group"
+                    type = string
+                    default = "kubevela-group"
+                  }
+
+                  output "SERVER_NAME" {
+                    value = var.server_name
+                  }
+
+                  output "DB_NAME" {
+                    value = var.db_name
+                  }
+                  output "DB_USER" {
+                    value = var.username
+                  }
+                  output "DB_PASSWORD" {
+                    sensitive = true
+                    value = var.password
+                  }
+                  output "DB_PORT" {
+                    value = 3306
+                  }
+                  output "DB_HOST" {
+                    value = azurerm_mariadb_server.example.fqdn
                   }
                 providerRef:
                   name: azure
