--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -882,15 +882,30 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow
                         step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step
+                            execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step
+                            execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details
@@ -956,6 +971,7 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
                 - suspend
                 - terminated
@@ -1940,15 +1956,30 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow
                         step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step
+                            execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step
+                            execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details
@@ -2014,6 +2045,7 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
                 - suspend
                 - terminated
