--- a/docs/examples/workflow/webhook-notification/app.yaml
+++ b/docs/examples/workflow/webhook-notification/app.yaml
@@ -22,13 +22,19 @@ spec:
         type: webhook-notification
         properties:
           dingding:
-            url: ding url
+            # directly specify the webhook url
+            url:
+              address: <dingding-url>
             message:
               msgtype: text
               text:
                 content: Hello KubeVela
           slack:
-            url: slack url
+            url:
+              # use url in secret
+              formSecret:
+                name: <secret-name>
+                key: <secret-key>
             message:
               text: Hello KubeVela
       - name: first-server
