--- a/.github/workflows/apiserver-test.yaml
+++ b/.github/workflows/apiserver-test.yaml
@@ -90,7 +90,10 @@ jobs:
         run: make unit-test-apiserver
 
       - name: Run apiserver e2e test
-        run: make e2e-apiserver-test
+        run: |
+          export ALIYUN_ACCESS_KEY_ID=${{ secrets.ALIYUN_ACCESS_KEY_ID }}
+          export ALIYUN_ACCESS_KEY_SECRET=${{ secrets.ALIYUN_ACCESS_KEY_SECRET }}
+          make e2e-apiserver-test
 
       - name: Stop kubevela, get profile
         run: make end-e2e-core
